--- a/src/posts/published/symbolic-logic/index.mdx
+++ b/src/posts/published/symbolic-logic/index.mdx
@@ -83,11 +83,11 @@ I have always found _modus tollens_ fascinating. Heuristically, we would gravita
 
 In programming, if we know that we have written a condition correctly, and we do not get the desired result, than we can deduce we have not met our condition. Worse than not meeting the requirements our condition, is knowing we have not satisfied our condition and, yet, our desired result still occurs. That, my friends, is a bug.
 
-#### Conjuction and Simplification
+#### Conjunction and Simplification
 
 No more Latin principles. I promise. Our next rules can be considered partners, and therefore will be taught together.
 
-Conjuction is the combining of two propositions: `p`, `q`, therefore `p & q`.
+conjunction is the combining of two propositions: `p`, `q`, therefore `p & q`.
 
 ```
 1. p
@@ -96,7 +96,7 @@ Conjuction is the combining of two propositions: `p`, `q`, therefore `p & q`.
 3. p & q   1,2 Con.
 ```
 
-Simplification is taking a conjuction and reducing it to one of its propositions: `p & q`, therefore `p`.
+Simplification is taking a conjunction and reducing it to one of its propositions: `p & q`, therefore `p`.
 
 ```
 1. p & q
@@ -328,7 +328,7 @@ Now, I bet you've done that refactor _a lot_. Combine this with "short circuitin
 
 This one is fairly complex looking, but breaking it down makes it more digestible.
 
-Two propositions are equivalent if it can be demonstrated that they entail one another. Two propositions are also equivalent if it can be demonstrated that their conjuction is true or the conjunction of their negations is true.
+Two propositions are equivalent if it can be demonstrated that they entail one another. Two propositions are also equivalent if it can be demonstrated that their conjunction is true or the conjunction of their negations is true.
 
 #### Distribution
 
