--- a/src/snippets/use-local-storage.mdx
+++ b/src/snippets/use-local-storage.mdx
@@ -1,11 +1,11 @@
 ---
 slug: 'use-local-storage'
 name: 'useLocalStorage()'
-description: 'Drop-in replacement for <code>useState</code> that persists state to <code>localStorage</code>'
+description: 'Hook for persisting state to <code>localStorage</code>'
 category: 'React Hooks'
 ---
 
-This is a drop-in replacement for `useState` that will persist the value to `localStorage`. Update the error handling to suit your needs.
+This is a hook for persisting state to `localStorage`. Update the error handling to suit your needs.
 
 ```typescript
 import { useCallback, useState } from "react";
