write magic values post

--- a/src/posts/published/not-all-just-javascript-is-the-same/index.mdx
+++ b/src/posts/published/not-all-just-javascript-is-the-same/index.mdx
@@ -1,7 +1,7 @@
 ---
 date: '2017-09-07'
 slug: 'not-all-just-javascript-is-the-same'
-title: 'Not All "Just JavaScript" is the Same'
+title: 'Not All &ldquo;Just JavaScript&rdquo; is the Same'
 tags: ['Thoughts']
 ---
 
