--- a/src/posts/published/small-gripe-target_blank/index.mdx
+++ b/src/posts/published/small-gripe-target_blank/index.mdx
@@ -1,7 +1,7 @@
 ---
 date: '2015-01-26'
 slug: 'small-gripe-target_blank'
-title: 'Small Gripe: Target="_blank"'
+title: 'Small Gripe: Target=&ldquo;_blank&rdquo;'
 tags: ['Thoughts']
 ---
 
