adds description for magic values post

--- a/src/posts/published/what-are-magic-values/index.mdx
+++ b/src/posts/published/what-are-magic-values/index.mdx
@@ -3,7 +3,7 @@ date: '2021-06-26'
 slug: 'what-are-magic-values'
 title: 'What are &ldquo;Magic Values&rdquo;?'
 subtitle: null
-description: ''
+description: 'Learn what "magic values" are in programming and how to avoid them to improve the quality of your code.'
 excerpt: 'I recently did a code review for an aspring developer and instructed them to &ldquo;get rid of the &lsquo;magic values&rsquo; in their code.&rdquo; It dawned on me that it might not have been obvious what I meant, so I figured I would take a few moments, and paragraphs, to explain.'
 tags: ['JavaScript', 'Software Engineering']
 relatedPostsSlugs: []
